--- a/html/main.html
+++ b/html/main.html
@@ -216,14 +216,14 @@
     .input-container > .input-label {
       font-size: 0.8em;
       left: 0;
-      width: 28%;
+      width: 35%;
       padding-right: 0.875em;
       text-align: right;
       min-width: 120px;
     }
     .input-container > .input-content {
-      left: 30%;
-      width: 65%;
+      left: 35%;
+      width: 60%;
     }
     .input-content input,  .input-content select {
       height: 100%;
@@ -235,11 +235,11 @@
       outline: none;
     }
     .page-content td[colspan='2'] .input-label {
-      width: 15%;
+      width: 17.5%;
     }
     .page-content td[colspan='2'] .input-content {
-      left: 15%;
-      width: 82.5%;
+      left: 17.5%;
+      width: 80%;
     }
 
     .table-data tr:nth-child(odd)
@@ -255,6 +255,7 @@
       padding: 0.5em;
       bottom: 0.5em;
       right: 2.5em;
+      display: none;
     }
     .table-footer > .current-page{
       float: right;
@@ -324,11 +325,11 @@
     }
 
     .window-content .input-label {
-      width: 35%;
+      width: 40%;
     }
     .window-content .input-content {
-      left: 35%;
-      width: 65%;
+      left: 40%;
+      width: 60%;
     }
     #closeMask {
       color: #EE0000;
@@ -342,11 +343,11 @@
       cursor: pointer;
     }
     .window-content td[colspan='2'] .input-label {
-      width: 17.5%;
+      width: 20%;
     }
     .window-content td[colspan='2'] .input-content {
-      left: 17.5%;
-      width: 82.5%;
+      left: 20%;
+      width: 80%;
     }
 
     .window-content button {
