Fixed the bug that causes a problem which UPDATE button can`t be generated

--- a/html/main.html
+++ b/html/main.html
@@ -715,7 +715,7 @@
     ROW_SETS = data;
 
     var htmlStr = '';
-    if (hasControl)
+    if (!hasControl)
       hasControl = false;
     for (var i = 0; i <data.length; i++) {
       var d = data[i];
