时间格式化

--- a/html/main.html
+++ b/html/main.html
@@ -771,7 +771,7 @@
   }
 
   function parseDate(timestamp) {
-    var date = new Date(timestamp);
+    var date = new Date( Number(timestamp) );
     var y = date.getFullYear();
     var m = (date.getMonth() + 1) < 10 ? '0' + (date.getMonth() + 1) : (date.getMonth() + 1);
     var d = date.getDate() < 10 ? '0' + date.getDate() : date.getDate();
